--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "svelte": "^3.38.2"
   },
   "dependencies": {
+    "clean": "^4.0.2",
     "sirv-cli": "^1.0.0",
     "sveltestrap": "^4.2.1"
   }
